add jvmArgs --illegal-access=deny